cmake_minimum_required(VERSION 3.20)
project(Semana3 LANGUAGES CXX)
include(CTest)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

option(CC232_ENABLE_DENG_BRIDGE "Build optional Deng bridge demos/tests" ON)

add_library(sem3_headers INTERFACE)
target_include_directories(sem3_headers INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/include")
target_compile_features(sem3_headers INTERFACE cxx_std_17)

function(cc232_add_sem3_target target_name source_file)
  add_executable(${target_name} "${source_file}")
  target_link_libraries(${target_name} PRIVATE sem3_headers)
endfunction()

cc232_add_sem3_target(sem3_demo_sllist "demos/demo_sllist.cpp")
cc232_add_sem3_target(sem3_demo_dllist "demos/demo_dllist.cpp")
cc232_add_sem3_target(sem3_demo_selist "demos/demo_selist.cpp")
cc232_add_sem3_target(sem3_demo_capitulo3_panorama "demos/demo_capitulo3_panorama.cpp")
cc232_add_sem3_target(sem3_demo_min_structures "demos/demo_min_structures.cpp")
cc232_add_sem3_target(sem3_demo_xor_list "demos/demo_xor_list.cpp")
cc232_add_sem3_target(sem3_demo_linked_adapters "demos/demo_linked_adapters.cpp")
cc232_add_sem3_target(sem3_demo_contiguous_vs_linked "demos/demo_contiguous_vs_linked.cpp")
cc232_add_sem3_target(sem3_benchmark "benchmarks/benchmark_semana3.cpp")

cc232_add_sem3_target(sem3_test_public "pruebas_publicas/test_public_week3.cpp")
cc232_add_sem3_target(sem3_test_public_extras "pruebas_publicas/test_public_extras.cpp")
cc232_add_sem3_target(sem3_test_internal "pruebas_internas/test_internal_week3.cpp")
cc232_add_sem3_target(sem3_stress_selist "pruebas_internas/stress_selist_week3.cpp")
cc232_add_sem3_target(sem3_test_internal_extras "pruebas_internas/test_internal_extras.cpp")
cc232_add_sem3_target(sem3_test_public_linked_adapters "pruebas_publicas/test_public_linked_adapters.cpp")
cc232_add_sem3_target(sem3_test_public_compare "pruebas_publicas/test_public_contiguous_vs_linked.cpp")

add_test(NAME semana3_public COMMAND sem3_test_public)
add_test(NAME semana3_public_extras COMMAND sem3_test_public_extras)
add_test(NAME semana3_internal COMMAND sem3_test_internal)
add_test(NAME semana3_internal_extras COMMAND sem3_test_internal_extras)
add_test(NAME semana3_stress_selist COMMAND sem3_stress_selist)
add_test(NAME semana3_public_linked_adapters COMMAND sem3_test_public_linked_adapters)
add_test(NAME semana3_public_compare COMMAND sem3_test_public_compare)

if(CC232_ENABLE_DENG_BRIDGE)
  if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/include/DengList.h" AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/include/MorinDengBridge.h")
    cc232_add_sem3_target(sem3_demo_deng_list "demos/demo_deng_list.cpp")
    cc232_add_sem3_target(sem3_demo_morin_deng_bridge "demos/demo_morin_deng_bridge.cpp")
    cc232_add_sem3_target(sem3_test_public_deng "pruebas_publicas/test_public_deng_bridge.cpp")
    cc232_add_sem3_target(sem3_test_internal_deng "pruebas_internas/test_internal_deng_algorithms.cpp")

    add_test(NAME semana3_public_deng COMMAND sem3_test_public_deng)
    add_test(NAME semana3_internal_deng COMMAND sem3_test_internal_deng)
  else()
    message(WARNING "CC232_ENABLE_DENG_BRIDGE=ON, pero faltan DengList.h o MorinDengBridge.h")
  endif()
endif()
